added secret key

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-SECRET_KEY = "enter your personal key"
+SECRET_KEY = "django-insecure-7oh#^tgwn19n9(1ok6vz7%wit@kmqu@e)g+!m*8&du8^6!d$0w"
 DEBUG = True
