--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
 asgiref==3.8.1
 backports.zoneinfo==0.2.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==43.0.3
 Django==4.2.15
+django-allauth==65.0.2
 django-widget-tweaks==1.5.0
+idna==3.10
 isort==5.13.2
 pillow==10.4.0
+pycparser==2.22
+PyJWT==2.9.0
 python-dotenv==1.0.1
+requests==2.32.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
+urllib3==2.2.3
