--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ django-widget-tweaks==1.5.0
 idna==3.10
 isort==5.13.2
 pillow==10.4.0
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 python-dotenv==1.0.1
